Modify: label 위치 수정

--- a/pages/product_list.html
+++ b/pages/product_list.html
@@ -11,10 +11,9 @@
             <img src="/assets/Logo-hodu.png" alt="HODU">
         </h1>
         <form action="" method="get">
-            <label for="">
-                <input type="text" placeholder="상품을 검색해보세요!">
-                <button type="submit" class="sr-only">검색하기</button>
-            </label>
+            <label for="">상품 검색하기</label>
+            <input type="text" placeholder="상품을 검색해보세요!">
+            <button type="submit" class="sr-only"></button>
         </form>
         <nav>
             <ul>
