--- a/pages/product_list.html
+++ b/pages/product_list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HODU page</title>
+    <title>HODU 페이지</title>
 </head>
 <body>
     <header>
