--- a/pages/join.html
+++ b/pages/join.html
@@ -40,6 +40,40 @@
                 <p>호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동의합니다.</p>
                 <button type="submit">가입하기</button>
             </form>
+        </section>
+        <section>
+            <h2 class="sr-only">판매회원가입</h2>
+            <form action="">
+                <label for="">아이디</label>
+                <input type="text">
+                <button>중복확인</button>
+                <label for="">비밀번호</label>
+                <input type="password">
+                <label for="">비밀번호 재확인</label>
+                <input type="password">
+
+                <label for="">이름</label>
+                <input type="text" name="" id="">
+                <p>휴대폰번호</p>
+                <select name="" id="">
+                    <option value="010" selected></option>
+                    <option value="011"></option>
+                    <option value="016"></option>
+                    <option value="017"></option>
+                    <option value="018"></option>
+                    <option value="019"></option>
+                </select>
+                <label for="">사업자 등록번호</label>
+                <input type="number">
+                <button>인증</button>
+                <label for="">스토어 이름</label>
+                <input type="text">
+                <label for="">이용약관 및 개인정보수집 동의</label>
+                <input type="checkbox">
+                <p>호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동의합니다.</p>
+                <button type="submit">가입하기</button>
+            </form>
+        </section>
     </article>
 </body>
 </html>
