--- a/pages/join.html
+++ b/pages/join.html
@@ -12,6 +12,8 @@
         </h1>
         <button>구매회원가입</button>
         <button>판매회원가입</button>
+        
+        <!--구매회원-->
         <section>
             <h2 class="sr-only">구매회원가입</h2>
             <form action="">
@@ -41,6 +43,8 @@
                 <button type="submit">가입하기</button>
             </form>
         </section>
+
+        <!--판매회원-->
         <section>
             <h2 class="sr-only">판매회원가입</h2>
             <form action="">
@@ -69,7 +73,7 @@
                 <label for="">스토어 이름</label>
                 <input type="text">
                 <label for="">이용약관 및 개인정보수집 동의</label>
-                <input type="checkbox">
+                <img src="/assets/check-box.svg" alt="동의하기">
                 <p>호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동의합니다.</p>
                 <button type="submit">가입하기</button>
             </form>
