--- a/pages/login.html
+++ b/pages/login.html
@@ -12,6 +12,8 @@
         </h1>
         <button>구매회원 로그인</button>
         <button>판매회원 로그인</button>
+        
+        <!--구매회원-->
         <section>
             <h2 class="sr-only">구매회원 로그인</h2>
             <form action="">
@@ -21,6 +23,8 @@
                 <button type="submit">로그인</button>
             </form>
         </section>
+        
+        <!--판매회원-->
         <section>
             <h2 class="sr-only">판매회원 로그인</h2>
             <form action="">
