--- a/pages/product_list.html
+++ b/pages/product_list.html
@@ -6,6 +6,7 @@
     <title>HODU 페이지</title>
 </head>
 <body>
+    <!--비회원 페이지-->
     <header>
         <h1>
             <img src="/assets/Logo-hodu.png" alt="HODU">
