--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품정보</title>
+    <link rel="stylesheet" href="/styles/reset.css">
 </head>
 <body>
     <main>
