--- a/pages/join.html
+++ b/pages/join.html
@@ -19,9 +19,8 @@
             <span>판매회원가입</span>
         </button>
         
-        <!--구매회원-->
-        <section class="joinForbuyer">
-            <h2 class="sr-only">구매회원가입</h2>
+        <section>
+            <h2 class="sr-only">회원가입</h2>
             <form action="">
                 <div class="userCheck">
                     <div class="user">
@@ -54,55 +53,20 @@
                     <input type="text" name="num2" id="num2">
                     <input type="text" name="num3" id="num3">
                 </div>
-            </form>
-            <p>호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동<br>의합니다.</p>
-            <button type="submit" class="join">가입하기</button>
-        </section>
-
-        <!--판매회원-->
-        <section class="joinForseller">
-            <h2 class="sr-only">판매회원가입</h2>
-            <form action="">
-                <div class="userCheck">
-                    <div class="user">
-                        <label for="id">아이디</label>
-                        <input type="text" id="id" name="id" required>
+                <!--판매회원가입 추가내용-->
+                <div class="joinForseller">
+                    <div class="companyCheck">
+                        <div class="company">
+                            <label for="businessNum">사업자 등록번호</label>
+                            <input type="text" id="businessNum" name="businessNum">
+                        </div>
+                            <button class="certify">인증</button>
                     </div>
-                    <button>중복확인</button>
-                </div>
-                <label for="pw">비밀번호</label>
-                <input type="password" id="pw" name="pw" required>
-                <label for="pw">비밀번호 재확인</label>
-                <input type="password" id="pw" name="pw" required>
-
-                <label for="name" class="nameLabel">이름</label>
-                <input type="text" name="name" id="name" required>
-                <p>휴대폰번호</p>
-                <div class="dropdown"> 
-                    <button class="dropdown-btn">
-                        <span>010</span>
-                        <img src="/assets/icon-down-arrow.svg" alt="" class="arrow">
-                    </button>
-                    <div class="dropdown-content">
-                        <div class="dropdown-item" data-value="010">010</div>
-                        <div class="dropdown-item" data-value="011">011</div>
-                        <div class="dropdown-item" data-value="016">016</div>
-                        <div class="dropdown-item" data-value="017">017</div>
-                        <div class="dropdown-item" data-value="018">018</div>
-                        <div class="dropdown-item" data-value="019">019</div>
+                    <div class="storeName">
+                        <label for="store">스토어 이름</label>
+                        <input type="text" id="store" name="store">
                     </div>
-                    <input type="text" name="num2" id="num2">
-                    <input type="text" name="num3" id="num3">
                 </div>
-                <div class="companyCheck">
-                    <div class="company">
-                        <label for="businessNum">사업자 등록번호</label>
-                        <input type="text" id="businessNum" name="businessNum">
-                    </div>
-                        <button class="certify">인증</button>
-                </div>
-                <label for="store">스토어 이름</label>
-                <input type="text" id="store" name="store">
             </form>
             <p>호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동<br>의합니다.</p>
             <button type="submit" class="join">가입하기</button>
