--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품정보</title>
     <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/details.css">
 </head>
 <body>
+    <header>
+        <h1>
+            <img src="/assets/Logo-hodu.png" alt="HODU">
+        </h1>
+        <form action="" method="get">
+            <label for="search" class="sr-only">상품 검색하기</label>
+            <input type="text" name="search" id="search" placeholder="상품을 검색해보세요!">
+            <button type="submit" class="sr-only"></button>
+        </form>
+        <nav>
+            <ul>
+                <li>
+                    <button>
+                        <img src="/assets/icon-shopping-cart.svg" alt="">
+                        <p>장바구니</p>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <img src="/assets/icon-user.svg" alt="">
+                        <p>마이페이지</p>
+                    </button>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section>
             <h2 class="sr-only">상품정보</h2>
