Modify : 마크업 수정

--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -37,25 +37,37 @@
     <main>
         <section>
             <h2 class="sr-only">상품정보</h2>
-            <img src="/assets/blanket.png" alt="무릎담요 이미지">
-            <p>백엔드글로벌</p>
-            <strong>딥러닝 개발자 무릎 담요</strong>
-            <span>17,500</span>
-            <span>원</span>
-            <div>
-                <p>택배배송 / 무료배송</p>
-                <div>
-                    <button><img src="/assets/icon-minus-line.svg" alt=""></button>
-                    <div>1</div>
-                    <button><img src="/assets/icon-plus-line.svg" alt=""></button>
+            <img src="/assets/blanket_detail.png" alt="무릎담요 이미지" class="blanket"> 
+            <div class="content">
+                <p>백엔드글로벌</p>
+                <strong>딥러닝 개발자 무릎 담요</strong>
+                <div class="price">
+                    <span>17,500</span>
+                    <span>원</span>
                 </div>
+                <div class="quantity">
+                    <p>택배배송 / 무료배송</p>
+                    <div class="quantity-btn">
+                        <button>
+                            <img src="/assets/icon-minus-line.svg" alt="">
+                        </button>
+                        <div>1</div>
+                        <button>
+                            <img src="/assets/icon-plus-line.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="info">
+                    <p>총 상품 금액</p>
+                    <p>총 수량 <span>1</span>개</p>
+                    <div>
+                        <span>17,500</span>
+                        <span>원</span>
+                    </div>
+                </div>
+                <button class="buy">바로 구매</button>
+                <button class="keep">장바구니</button>
             </div>
-            <p>총 상품 금액</p>
-            <p>총 수량 1개</p>
-            <span>17,500</span>
-            <span>원</span>
-            <button>바로 구매</button>
-            <button>장바구니</button>
         </section>
         <section>
             <h2 class="sr-only">구매정보</h2>
