--- a/pages/product_list.html
+++ b/pages/product_list.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/styles/list.css">
 </head>
 <body>
-    <!--비회원 페이지-->
     <header>
         <h1>
             <img src="/assets/Logo-hodu.png" alt="HODU">
@@ -37,6 +36,13 @@
     </header>
     <section>
         <h2 class="sr-only">둘러보기</h2>
+        <div class="browsing">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </section>
     <main>
         <section>
@@ -107,69 +113,70 @@
         </section>
     </main>
     <footer>
-        <div>
-            <section>
-                <h2 class="sr-only">페이지 상세정보</h2>
+        <div class="container">
+            <div class="morePages">
+                <section>
+                    <h2 class="sr-only">페이지 상세정보</h2>
+                        <ul>
+                            <li>
+                                <a href="#">호두샵 소개</a>
+                            </li>
+                            <li>
+                                <a href="#">이용약관</a>
+                            </li>
+                            <li>
+                                <a href="#">개인정보처리방침</a>
+                            </li>
+                            <li>
+                                <a href="#">전자금융거래약관</a>
+                            </li>
+                            <li>
+                                <a href="#">청소년보호정책</a>
+                            </li>
+                            <li>
+                                <a href="#">제휴문의</a>
+                            </li>
+                        </ul>
+                </section>
+                <section class="SNS 바로가기">
                     <ul>
                         <li>
-                            <a href="#">호두샵 소개</a>
+                            <a href="#">
+                                <img src="/assets/icon-insta.svg" alt="인스타그램 바로가기">
+                            </a>
                         </li>
                         <li>
-                            <a href="#">이용약관</a>
+                            <a href="#">
+                                <img src="/assets/icon-fb.svg" alt="페이스북 바로가기">
+                            </a>
                         </li>
                         <li>
-                            <a href="#">개인정보처리방침</a>
-                        </li>
-                        <li>
-                            <a href="#">전자금융거래약관</a>
-                        </li>
-                        <li>
-                            <a href="#">청소년보호정책</a>
-                        </li>
-                        <li>
-                            <a href="#">제휴문의</a>
+                            <a href="#">
+                                <img src="/assets/icon-yt.svg" alt="유투브 바로가기">
+                            </a>
                         </li>
                     </ul>
-            </section>
-            <section class="SNS 바로가기">
-                <ul>
-                    <li>
-                        <a href="">
-                            <img src="/assets/icon-insta.svg" alt="인스타그램 바로가기">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="/assets/icon-fb.svg" alt="페이스북 바로가기">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="/assets/icon-yt.svg" alt="유투브 바로가기">
-                        </a>
-                    </li>
-                </ul>
-            </section>
+                </section>
+            </div>
+            <address>
+                <h2 class="sr-only">기업정보</h2>
+                <dl>
+                    <dt class="sr-only">기업이름</dt>
+                    <dd class="companyName">(주)HODU SHOP</dd>
+                    <dt class="sr-only">기업주소</dt>
+                    <dd>제주특별자치도 제주시 동광고 137 제주코딩베이스캠프</dd>
+                    <span>
+                        <dt>사업자번호 :</dt>
+                        <dd>000-0000-0000</dd>
+                        <dd class="category">통신판매업</dd>
+                    </span>
+                    <span>
+                        <dt>대표 :</dt>
+                        <dd>김호두</dd>
+                    </span>
+                </dl>
+            </address>
         </div>
-        <hr>
-        <address>
-            <h2 class="sr-only">기업정보</h2>
-            <dl>
-                <dt class="sr-only">기업이름</dt>
-                <dd class="companyName">(주)HODU SHOP</dd>
-                <dt class="sr-only">기업주소</dt>
-                <dd>제주특별자치도 제주시 동광고 137 제주코딩베이스캠프</dd>
-                <span>
-                    <dt>사업자번호 :</dt>
-                    <dd>000-0000-0000</dd>
-                    <dd class="category">통신판매업</dd>
-                </span>
-                <span>
-                    <dt>대표 :</dt>
-                    <dd>김호두</dd>
-                </span>
-            </dl>
-        </address>
     </footer>
 </body>
 </html>
