--- a/pages/join.html
+++ b/pages/join.html
@@ -21,7 +21,7 @@
         
         <section>
             <h2 class="sr-only">회원가입</h2>
-            <form action="">
+            <form method="post">
                 <div class="userCheck">
                     <div class="user">
                         <label for="id">아이디</label>
@@ -29,16 +29,20 @@
                     </div>
                     <button>중복확인</button>
                 </div>
+                <div class="alertMsg">필수 정보입니다.</div>
                 <label for="pw">비밀번호</label>
                 <input type="password" id="pw" name="pw" required>
+                <div class="alertMsg">필수 정보입니다.</div>
                 <label for="pw">비밀번호 재확인</label>
-                <input type="password" id="pw" name="pw" required>
+                <input type="password" id="pw" name="pw" class="pwCheck" required>
+                <div class="alertMsg">필수 정보입니다.</div>
 
                 <label for="name" class="nameLabel">이름</label>
                 <input type="text" name="name" id="name" required>
+                <div class="alertMsg">필수 정보입니다.</div>
                 <p>휴대폰번호</p>
                 <div class="dropdown"> 
-                    <button class="dropdown-btn">
+                    <button class="dropdown-btn" type="button">
                         <span>010</span>
                         <img src="/assets/icon-down-arrow.svg" alt="" class="arrow">
                     </button>
@@ -51,8 +55,10 @@
                         <div class="dropdown-item" data-value="019">019</div>
                     </div>
                     <input type="text" name="num2" id="num2">
-                    <input type="text" name="num3" id="num3">
+                    <input type="text" name="num3" id="num3">      
                 </div>
+                <div class="alertMsg">해당 사용자 전화번호는 이미 존재합니다.</div>
+                
                 <!--판매회원가입 추가내용-->
                 <div class="joinForseller">
                     <div class="companyCheck">
@@ -68,9 +74,10 @@
                     </div>
                 </div>
             </form>
-            <p>호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동<br>의합니다.</p>
-            <button type="submit" class="join">가입하기</button>
+            <p class="agree">호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동<br>의합니다.</p>
+            <button type="submit" class="join" disabled>가입하기</button>
         </section> 
+        <script src="/js/join.js"></script>
     </article>
 </body>
 </html>
