--- a/pages/product_list.html
+++ b/pages/product_list.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU">
+            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
-        <form action="" method="get">
+        <form method="get">
             <label for="search" class="sr-only">상품 검색하기</label>
             <input type="text" name="search" id="seach" placeholder="상품을 검색해보세요!">
             <button type="submit" class="sr-only"></button>
@@ -20,13 +20,13 @@
         <nav>
             <ul>
                 <li>
-                    <button>
+                    <button class="keep">
                         <img src="/assets/icon-shopping-cart.svg" alt="">
                         <p>장바구니</p>
                     </button>
                 </li>
                 <li>
-                    <button>
+                    <button class="login">
                         <img src="/assets/icon-user.svg" alt="">
                         <p>로그인</p>
                     </button>
@@ -178,6 +178,7 @@
             </address>
         </div>
     </footer>
+    <script src="/js/list.js"></script>
 </body>
 </html>
 
