--- a/pages/join.html
+++ b/pages/join.html
@@ -10,7 +10,7 @@
 <body>
     <article>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU">
+            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <button class="buyer-btn">
             <span>구매회원가입</span>
