--- a/pages/login.html
+++ b/pages/login.html
@@ -10,7 +10,7 @@
 <body>
     <article>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU">
+            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <button class="buyer-login">
             <span>구매회원 로그인</span>
