class 추가 및 p태그 값 변경

--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU">
+            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <form action="" method="get">
             <label for="search" class="sr-only">상품 검색하기</label>
@@ -28,7 +28,7 @@
                 <li>
                     <button>
                         <img src="/assets/icon-user.svg" alt="">
-                        <p>마이페이지</p>
+                        <p>로그인</p>
                     </button>
                 </li>
             </ul>
@@ -79,5 +79,6 @@
             </ul>
         </section>
     </main>
+    <script src="/js/details.js"></script>
 </body>
 </html>
