--- a/pages/product_list.html
+++ b/pages/product_list.html
@@ -72,7 +72,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="/assets/blanket.png" alt="개발자 무릎담요">
+                        <img src="/assets/blanket.png" alt="개발자 무릎담요" class="blanket">
                         <div class="info">
                             <p class="seller">백엔드글로벌</p>
                             <p class="product">딥러닝 개발자 무릎 담요</p>
