class 및 로그인 경로 추가

--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -27,7 +27,7 @@
                 </li>
                 <li>
                     <button>
-                        <img src="/assets/icon-user.svg" alt="">
+                        <img src="/assets/icon-user.svg" alt="" class="login">
                         <p>로그인</p>
                     </button>
                 </li>
