--- a/pages/main.html
+++ b/pages/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HODU 페이지</title>
     <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/list.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <header>
@@ -22,14 +22,14 @@
                 <li>
                     <button class="keep">
                         <img src="/assets/icon-shopping-cart.svg" alt="">
-                        <p>장바구니</p>
                     </button>
+                    <p>장바구니</p>
                 </li>
                 <li>
                     <button class="login">
                         <img src="/assets/icon-user.svg" alt="">
-                        <p>로그인</p>
                     </button>
+                    <p class="forUser">로그인</p>
                 </li>
             </ul>
         </nav>
@@ -178,7 +178,7 @@
             </address>
         </div>
     </footer>
-    <script src="/js/list.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
 
