--- a/pages/join.html
+++ b/pages/join.html
@@ -27,7 +27,7 @@
                         <label for="id">아이디</label>
                         <input type="text" id="id" name="id" required>
                     </div>
-                    <button>중복확인</button>
+                    <button class="idCheck">중복확인</button>
                 </div>
                 <div class="alertMsg">필수 정보입니다.</div>
                 <label for="pw">비밀번호</label>
