user menu 마크업 추가

--- a/pages/main.html
+++ b/pages/main.html
@@ -21,18 +21,23 @@
             <ul>
                 <li>
                     <button class="keep">
-                        <img src="/assets/icon-shopping-cart.svg" alt="">
+                        <img src="/assets/icon-shopping-cart.svg" alt="" class="shoppingCart">
                     </button>
-                    <p>장바구니</p>
+                    <p class="forProduct">장바구니</p>
                 </li>
                 <li>
                     <button class="login">
-                        <img src="/assets/icon-user.svg" alt="">
+                        <img src="/assets/icon-user.svg" alt="" class="userIcon">
                     </button>
                     <p class="forUser">로그인</p>
                 </li>
             </ul>
         </nav>
+        <div class="triangle"></div>
+        <div class="userMenu">
+            <button class="myPage">마이페이지</button>
+            <button class="logout">로그아웃</button>
+        </div>
     </header>
     <section>
         <h2 class="sr-only">둘러보기</h2>
