--- a/pages/details.html
+++ b/pages/details.html
@@ -28,10 +28,10 @@
                 <li>
                     <button>
                         <img src="/assets/icon-user.svg" alt="" class="login">
-                        <p>로그인</p>
+                        <p class="forUser">로그인</p>
                     </button>
                 </li>
-            </ul>
+            </ul> 
         </nav>
     </header>
     <main>
