--- a/pages/join.html
+++ b/pages/join.html
@@ -34,7 +34,7 @@
                 <input type="password" id="pw" name="pw" required>
                 <div class="alertMsg">필수 정보입니다.</div>
                 <label for="pw">비밀번호 재확인</label>
-                <input type="password" id="pw" name="pw" class="pwCheck" required>
+                <input type="password" id="pw2" name="pw" class="pwCheck" required>
                 <div class="alertMsg">필수 정보입니다.</div>
 
                 <label for="name" class="nameLabel">이름</label>
