user menu 마크업 추가

--- a/pages/details.html
+++ b/pages/details.html
@@ -20,19 +20,24 @@
         <nav>
             <ul>
                 <li>
-                    <button>
-                        <img src="/assets/icon-shopping-cart.svg" alt="">
-                        <p>장바구니</p>
+                    <button class="cart">
+                        <img src="/assets/icon-shopping-cart.svg" alt="" class="shoppingCart">
                     </button>
+                    <p class="forProduct">장바구니</p>
                 </li>
                 <li>
-                    <button>
-                        <img src="/assets/icon-user.svg" alt="" class="login">
-                        <p class="forUser">로그인</p>
+                    <button class="login">
+                        <img src="/assets/icon-user.svg" alt="" class="userIcon">
                     </button>
+                    <p class="forUser">로그인</p>
                 </li>
-            </ul> 
+            </ul>
         </nav>
+        <div class="triangle"></div>
+        <div class="userMenu">
+            <button class="myPage">마이페이지</button>
+            <button class="logout">로그아웃</button>
+        </div>
     </header>
     <main>
         <section>
