파일 경로 수정

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
     <article>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
+            <img src="../assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <button class="buyer-login">
             <span>구매회원 로그인</span>
@@ -34,7 +34,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="join.html">회원가입</a>
+                    <a href="..join.html">회원가입</a>
                 </li>
                 <li>
                     <a href="">비밀번호 찾기</a>
@@ -53,6 +53,6 @@
             </form>
         </section> -->
     </article>
-    <script src="/js/login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
