--- a/pages/details.html
+++ b/pages/details.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품정보</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/details.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/details.css">
 </head>
 <body>
     <header>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
+            <img src="../assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <form action="" method="get">
             <label for="search" class="sr-only">상품 검색하기</label>
@@ -21,13 +21,13 @@
             <ul>
                 <li>
                     <button class="cart">
-                        <img src="/assets/icon-shopping-cart.svg" alt="" class="shoppingCart">
+                        <img src="../assets/icon-shopping-cart.svg" alt="" class="shoppingCart">
                     </button>
                     <p class="forProduct">장바구니</p>
                 </li>
                 <li>
                     <button class="login">
-                        <img src="/assets/icon-user.svg" alt="" class="userIcon">
+                        <img src="../assets/icon-user.svg" alt="" class="userIcon">
                     </button>
                     <p class="forUser">로그인</p>
                 </li>
@@ -42,7 +42,7 @@
     <main>
         <section>
             <h2 class="sr-only">상품정보</h2>
-            <img src="/assets/blanket_detail.png" alt="무릎담요 이미지" class="blanket"> 
+            <img src="../assets/blanket_detail.png" alt="무릎담요 이미지" class="blanket"> 
             <div class="content">
                 <p>백엔드글로벌</p>
                 <strong>딥러닝 개발자 무릎 담요</strong>
@@ -54,11 +54,11 @@
                     <p>택배배송 / 무료배송</p>
                     <div class="quantity-btn">
                         <button>
-                            <img src="/assets/icon-minus-line.svg" alt="" class="minus">
+                            <img src="../assets/icon-minus-line.svg" alt="" class="minus">
                         </button>
                         <div class="quantity">1</div>
                         <button>
-                            <img src="/assets/icon-plus-line.svg" alt="" class="plus">
+                            <img src="../assets/icon-plus-line.svg" alt="" class="plus">
                         </button>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
     </main>
     <dialog class="login-dialog">
         <div>
-            <img src="/assets/icon-delete.svg" alt="창닫기" class="delete">
+            <img src="../assets/icon-delete.svg" alt="창닫기" class="delete">
             <p>로그인이 필요한 서비스입니다.</p>
             <p>로그인 하시겠습니까?</p>
         </div>
@@ -95,6 +95,6 @@
             <button class="goToLogin">예</button>
         </div>
     </dialog>    
-    <script src="/js/details.js"></script>
+    <script src="../js/details.js"></script>
 </body>
 </html>
