--- a/pages/join.html
+++ b/pages/join.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/join.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/join.css">
 </head>
 <body>
     <article>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
+            <img src="../assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <button class="buyer-btn">
             <span>구매회원가입</span>
@@ -44,7 +44,7 @@
                 <div class="dropdown"> 
                     <button class="dropdown-btn" type="button">
                         <span>010</span>
-                        <img src="/assets/icon-down-arrow.svg" alt="" class="arrow">
+                        <img src="../assets/icon-down-arrow.svg" alt="" class="arrow">
                     </button>
                     <div class="dropdown-content">
                         <div class="dropdown-item" data-value="010">010</div>
@@ -77,7 +77,7 @@
             <p class="agree">호두샵의 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 대한 내용을 확인하였고 동<br>의합니다.</p>
             <button type="submit" class="join" disabled>가입하기</button>
         </section> 
-        <script src="/js/join.js"></script>
+        <script src="../js/join.js"></script>
     </article>
 </body>
 </html>
