--- a/pages/main.html
+++ b/pages/main.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HODU 페이지</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <header>
         <h1>
-            <img src="/assets/Logo-hodu.png" alt="HODU" class="logo">
+            <img src="../assets/Logo-hodu.png" alt="HODU" class="logo">
         </h1>
         <form method="get">
             <label for="search" class="sr-only">상품 검색하기</label>
@@ -21,13 +21,13 @@
             <ul>
                 <li>
                     <button class="keep">
-                        <img src="/assets/icon-shopping-cart.svg" alt="" class="shoppingCart">
+                        <img src="../assets/icon-shopping-cart.svg" alt="" class="shoppingCart">
                     </button>
                     <p class="forProduct">장바구니</p>
                 </li>
                 <li>
                     <button class="login">
-                        <img src="/assets/icon-user.svg" alt="" class="userIcon">
+                        <img src="../assets/icon-user.svg" alt="" class="userIcon">
                     </button>
                     <p class="forUser">로그인</p>
                 </li>
@@ -55,7 +55,7 @@
             <div class="item-top">
                 <ul>
                     <li>
-                        <img src="/assets/pouch.png" alt="노트북 파우치">
+                        <img src="../assets/pouch.png" alt="노트북 파우치">
                         <div class="info">
                             <p class="seller">우당탕탕 라이캣의 실험실</p>
                             <p class="product">Hack Your Life 개발자 노트북 파우치</p>
@@ -66,7 +66,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="/assets/developer_keychain.png" alt="개발자 키링">
+                        <img src="../assets/developer_keychain.png" alt="개발자 키링">
                         <div class="info">
                             <p class="seller">제주코딩베이스캠프</p>
                             <p class="product">네 개발잡니다 개발자키링 금속키링</p>
@@ -77,7 +77,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="/assets/blanket.png" alt="개발자 무릎담요" class="blanket">
+                        <img src="../assets/blanket.png" alt="개발자 무릎담요" class="blanket">
                         <div class="info">
                             <p class="seller">백엔드글로벌</p>
                             <p class="product">딥러닝 개발자 무릎 담요</p>
@@ -92,7 +92,7 @@
             <div class="item-bottom">
                 <ul>
                     <li>
-                        <img src="/assets/stickers.png" alt="스티커 팩">
+                        <img src="../assets/stickers.png" alt="스티커 팩">
                         <div class="info">
                             <p class="seller">코딩앤유</p>
                             <p class="product">우당탕탕 라이캣의 실험실 스티커 팩</p>
@@ -103,7 +103,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="/assets/gary_keychain.png" alt="개리씨 키링">
+                        <img src="../assets/gary_keychain.png" alt="개리씨 키링">
                         <div class="info">
                             <p class="seller">파이썬스쿨</p>
                             <p class="product">버그를 Java라 버그잡는 개리씨 키링 개발자키링...</p>
@@ -147,17 +147,17 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="/assets/icon-insta.svg" alt="인스타그램 바로가기">
+                                <img src="../assets/icon-insta.svg" alt="인스타그램 바로가기">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/assets/icon-fb.svg" alt="페이스북 바로가기">
+                                <img src="../assets/icon-fb.svg" alt="페이스북 바로가기">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/assets/icon-yt.svg" alt="유투브 바로가기">
+                                <img src="../assets/icon-yt.svg" alt="유투브 바로가기">
                             </a>
                         </li>
                     </ul>
@@ -183,7 +183,7 @@
             </address>
         </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
 
