--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="..join.html">회원가입</a>
+                    <a href="../pages/join.html">회원가입</a>
                 </li>
                 <li>
                     <a href="">비밀번호 찾기</a>
